# randomall-tg-bot

./: Dockerfile  README.md  pyproject.toml  requirements.txt
randomall_tg_bot/: config.py  logger.py  main.py  messages.py  mq.py  router.py
scripts/: check  export  format  run
